# OOP-subiecte

Figura/: CMakeLists.txt  Color.cpp  Color.h  Dreptunghi.cpp  Dreptunghi.h  Figura.cpp  Figura.h  FiguriContainer.cpp  FiguriContainer.h  Patrat.cpp  Patrat.h  main.cpp
UML (Printer)/: CMakeLists.txt  Decimal.cpp  Decimal.h  Hexazecimal.cpp  Hexazecimal.h  Number.cpp  Number.h  Printer.cpp  Printer.h  main.cpp
UML(Database)/: CMakeLists.txt  Database.cpp  Database.h  Entry.cpp  Entry.h  IntegerData.cpp  IntegerData.h  StringData.cpp  StringData.h  main.cpp
UML(Masini)/: CMakeLists.txt  Dacia.cpp  Dacia.h  Masina.h  MasinaOras.h  Opel.cpp  Opel.h  RangeRover.cpp  RangeRover.h  SUV.h  main.cpp
UML(Shopping List)/: CMakeLists.txt  Food.cpp  Food.h  Item.cpp  Item.h  Miscellaneous.cpp  Miscellaneous.h  ShoppingList.cpp  ShoppingList.h  main.cpp
untitled4/: Biblioteca.cpp  Biblioteca.h  CMakeLists.txt  Carte.cpp  Carte.h  Revista.cpp  Revista.h  Roman.cpp  Roman.h  main.cpp
